--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Trabajo-Final
+server.error.include-message=always
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+# Configuración de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/PruebaBD2
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
