--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 # Configuración de PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/PruebaBD2
+spring.datasource.url=jdbc:postgresql://localhost:5432/UsuariosDB
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
