Funciona la bd de mongo, minimamente al menos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# CONFIG MONGO
+spring.data.mongodb.uri=mongodb://localhost:27017/ContactDB
