--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=Trabajo-Final
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-# Configuración de PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/UsuariosDB
+# Configuracian de PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/LoginDB
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
