YA APARECE LAS TARJETAS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Trabajo-Final
 server.error.include-message=always
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-# Configuracian de PostgreSQL
+# Configuration de PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/LoginDB
 spring.datasource.username=postgres
 spring.datasource.password=admin
