--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuración de MongoDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=admin # O la base de datos que quieras usar, por ejemplo "mibasededatos"
+# Si tu MongoDB requiere autenticación:
+# spring.data.mongodb.username=tu_usuario
+# spring.data.mongodb.password=tu_contraseña
